# LFM2.5-JP

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  task.md
.github/workflows/: ci.yml
configs/: base.yaml
configs/cpt/: cpt_1.2b_layerft.yaml  cpt_1.2b_layerft_cptD_L9.yaml  cpt_1.2b_layerft_cptD_L9_centi_manual.yaml  cpt_350m_pilot.yaml  cpt_8b_a1b_layerft.yaml
configs/data/: corpus.yaml  corpus_cptD.yaml  corpus_pilot.yaml  dpo_pairs_001.yaml  dpo_pairs_k3_facts.yaml  mix_002.yaml  mix_005.yaml
configs/dpo/: dpo_001_beta005.yaml  dpo_001_beta01.yaml  dpo_001_beta03.yaml  dpo_001r_beta005.yaml  dpo_k3_facts_beta005.yaml  dpo_k3_facts_beta01.yaml  dpo_k3_facts_beta03.yaml
configs/eval/: ifeval_ja.yaml  ifeval_ja_cptD_deci.yaml  ifeval_ja_k3_facts.yaml  llm_jp_eval.yaml  llm_jp_eval_cptD_deci.yaml  llm_jp_eval_dpo001.yaml  llm_jp_eval_k1.yaml  llm_jp_eval_k3_facts.yaml  llm_jp_eval_sft004.yaml  llm_jp_eval_zeroshot_chat.yaml
configs/sft/: sft_001_ichikara.yaml  sft_002_mix.yaml  sft_004_L6-9_lr1e-4.yaml  sft_004_L6-9_lr1e-5.yaml  sft_004_L6-9_lr3e-5.yaml  sft_004_L9_lr1e-4.yaml  sft_004_L9_lr1e-5.yaml  sft_004_L9_lr3e-5.yaml  sft_005_distill.yaml  sft_1.2b_layerft_L6-9.yaml  sft_1.2b_layerft_L6.yaml  sft_1.2b_layerft_L6L9.yaml  sft_1.2b_layerft_L9.yaml  sft_1.2b_layerft_full.yaml
datasets/dpo/: joryu_prompt_bank.jsonl
datasets/eval/ifeval_ja/: prompts.jsonl
datasets/eval/jkb/: _source_matrix.md  eval.jsonl  eval_texts.jsonl  schema.md  train.jsonl
datasets/sft/: sft005_distill_candidateB_prompts.csv
docs/: agent_ops.md  lfm2_5-ja-plan.md  sft_training_runbook.md
experiments/: EXPERIMENT_LOG.md
experiments/reports/: k0_jkb_v1.md  k1_asset_reassessment.md  k1_jkb_base_dryrun.md  k2_cptD.md  k3_dpo_facts.md  phase0_baseline.md  phase0_memory.md  phase1_pilot.md  phase2_cpt_b_final_eval.md  phase2_cpt_b_japan_probe.md  phase2_cpt_b_verification.md  phase2_gate_and_next_steps.md  phase2_layer_profiling.md  phase3_sft002_mix.md  phase3_sft002_mix_stats.md  phase3_sft004_chat_eval.md  phase3_sft004_lr_sweep.md  phase3_sft005_distill.md  phase3_sft005_distill_stats.md  phase3_sft_layer_ablation.md  phase3_verify_b_zeroshot_chat.md  phase4_dpo001.md  phase4_dpo001_pairs_stats.md  phase4_dpo001_pool_stats.md
experiments/reports/k1_asset_reassessment_data/: base_report.md  cptB-final-postfix_llmjp.json  cptB-final_ifeval_aggregate.json  cptB-final_report.md  cptB-final_scored.jsonl  dpo-001-b005_report.md  dpo-001-b005_scored.jsonl  jkb_summary.md  k1_summary.json  k1_summary.md  sft005-distill_llmjp.json  sft005-distill_report.md  sft005-distill_scored.jsonl
experiments/reports/k1_jkb_base_dryrun_data/: base_generations.jsonl  base_scored.jsonl
experiments/reports/k2_gate_artifacts/: cptD_deci_verdict.json  cptD_deci_verdict.md  (+2 more)
scratchpad/: build_cptD_corpus.py  cleanup_wsl_k2.sh  generated_samples_sft004.md  run_k3_gate_only.sh
scripts/: 00_smoke_test.sh  10_prepare_data.sh  11_prepare_sft002_mix.sh  20_train_cpt.sh  21_train_cpt_b.sh  22_train_cpt_8b.sh  22_train_cpt_d.sh  30_train_sft.sh  31_train_sft002_mix.sh  40_train_dpo.sh  41_serve_judge_vllm.sh  42_pref_k3_facts_pipeline.sh  43_train_dpo_k3_facts.sh  50_eval_all.sh  60_eval_ifeval_ja.sh  build_jkb_v1.py  check_jkb_contamination.py  create_issues.py  eval_k1.py  eval_k2_gate.py  eval_k3_gate.py  run_jkb.py  setup_github_meta.ps1  setup_gpu.ps1
src/lfm25_ja/: __init__.py
tests/: conftest.py  test_aya_ja.py  test_config.py  test_cpt_8b_configs.py  test_data_pipeline.py  test_distill_select.py  test_eval_answer_extraction.py  test_eval_config.py  test_eval_k1.py  test_eval_k2_gate_cli.py  test_format_constraints.py  test_ichikara.py  test_ifeval_ja_dataset.py  test_instruction_verifiers.py  test_japan_probe.py  test_jkb.py  test_judge_swallow_facts.py  test_k2_decision.py  test_k3_decision.py  test_llm_jp_instruct.py  test_memory.py  test_memory_probe.py  test_mix_sft.py  test_package.py  test_packed_cache.py  test_pref_pairs_facts.py  test_pref_pipeline.py  test_pref_prompts_jkb.py  test_pref_verify_facts.py  test_prepare_sft_mix.py  test_quick_eval.py  test_run_ifeval_ja_pipeline.py  test_run_llm_jp_eval_pipeline.py  test_scripts.py  test_seed.py  test_sft_configs.py  test_train_cpt.py  test_train_dpo.py  test_train_sft.py  test_train_smoke.py  (+1 more)
tests/fixtures/: dpo_test.yaml  dpo_test_pairs.jsonl  ifeval_ja_sample.jsonl  sft_test.yaml
(+62 files in other folders)
