[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfm25-ja"
version = "0.1.0"
description = "Japanese-specialized LFM2.5 fine-tuning on RTX 3060 Ti (8GB)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "sotanengel" }]
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.46.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "bitsandbytes>=0.44.0; platform_system != 'Darwin'",
    "datasets>=3.0.0",
    "pyyaml>=6.0",
    "accelerate>=1.0.0",
    "sentencepiece>=0.2.0",
    "datasketch>=1.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]
gpu = [
    # Windows: pinned to pytorch-cu126 index (no flash SDP kernel, math backend
    # falls back to N^2 materialization; see Issue #64).
    "torch==2.12.1+cu126; sys_platform == 'win32'",
    # Linux (incl. WSL2): PyPI wheel bundles CUDA and has flash SDP kernels
    # (verified with 2.13.0+cu130, see EXPERIMENT_LOG probe-005).
    "torch>=2.13; sys_platform == 'linux'",
]
eval = [
    "lm-eval>=0.4.5",
]

[tool.uv]
# Universal resolution otherwise also solves for hypothetical future Python
# versions (e.g. 3.14+) that upstream torch has not published wheels for yet
# on every platform, which makes `uv lock` fail even though the project
# targets 3.11 (`uv venv --python 3.11` in Makefile / README). Cap the
# resolved environments to keep the lock solvable.
environments = ["python_version < '3.14'"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "gpu", marker = "sys_platform == 'win32'" },
]


[tool.hatch.build.targets.wheel]
packages = ["src/lfm25_ja"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring CUDA GPU",
]
addopts = "-m 'not gpu'"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
